add default java option